fix login user on mobile

--- a/assets/src/scss/2-vendors/custom-bootstrap/_yii-button-groups.scss
+++ b/assets/src/scss/2-vendors/custom-bootstrap/_yii-button-groups.scss
@@ -10,8 +10,6 @@ $yii-btn-border-radius-base: 6px;
     position: relative;
     float: left;
 
-    font-size: 14px !important;
-
     &:hover,
     &:focus,
     &:active,
